--- a/app/src/main/res/values-ru/strings_dialog.xml
+++ b/app/src/main/res/values-ru/strings_dialog.xml
@@ -34,14 +34,6 @@
         приложению необходимо ваше разрешение. Иначе некоторые мелодии будут не доступны для вас.
     </string>
 
-    <string name="dialog_title_import_permission">Требуется разрешение</string>
-    <string name="dialog_text_import_permission">
-        Для поиска файлов находящихся на SD карте, приложению необходимо ваше разрешение.
-        Иначе некоторые файлы будут не доступны для вас.
-    </string>
-
-    <string name="dialog_title_import">Выберите файл</string>
-
     <string name="dialog_title_export_permission">Требуется разрешение</string>
     <string name="dialog_text_export_permission">
         Для сохранения файла с резервной копией, приложению необходимо ваше разрешение.
@@ -51,8 +43,22 @@
     <string name="dialog_title_export_deny">Включите разрешение</string>
     <string name="dialog_text_export_deny">
         Мы не можем выполнить создание резервной копии без нужного разрешения.
-        Пройдите в настройки приложения и включите его.
+        Пройдите в настройки приложения и включите рахрешение \"Хранилище\".
     </string>
+
+    <string name="dialog_title_import_permission">Требуется разрешение</string>
+    <string name="dialog_text_import_permission">
+        Для поиска всех файлов восстановления данных, приложению необходимо ваше разрешение.
+        Иначе мы не сможем сделать это для вас.
+    </string>
+
+    <string name="dialog_title_import_deny">Включите разрешение</string>
+    <string name="dialog_text_import_deny">
+        Мы не можем начать поиск файлов для восстановления данных без нужного разрешения.
+        Пройдите в настройки приложения и включите рахрешение \"Хранилище\".
+    </string>
+
+    <string name="dialog_title_import">Выберите файл</string>
 
     <string name="dialog_title_repeat">Выбрать повтор</string>
     <string name="dialog_repeat_0">10 минут</string>
