--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -34,14 +34,6 @@
         Otherwise some ringtones will not be available to you.
     </string>
 
-    <string name="dialog_title_import_permission">Required permission</string>
-    <string name="dialog_text_import_permission">
-        In order to find files located on the SD card, application needs your permission.
-        Otherwise some files will not be available to you.
-    </string>
-
-    <string name="dialog_title_import">Choose file</string>
-
     <string name="dialog_title_export_permission">Required permission</string>
     <string name="dialog_text_export_permission">
         In order to save backup file, application needs your permission.
@@ -50,8 +42,23 @@
 
     <string name="dialog_title_export_deny">Turn on permission</string>
     <string name="dialog_text_export_deny">
-        We can\'t do backup without necessary permission. Turn them on in application settings.
+        We can\'t do backup without necessary permission.
+        Turn on \"Storage\" permission in application settings.
     </string>
+
+    <string name="dialog_title_import_permission">Required permission</string>
+    <string name="dialog_text_import_permission">
+        In order to find all backup files, application needs your permission.
+        Otherwise we can\'t do it for you.
+    </string>
+
+    <string name="dialog_title_import_deny">Turn on permission</string>
+    <string name="dialog_text_import_deny">
+        We can\'t start search backup files without necessary permission.
+        Turn on \"Storage\" permission in application settings.
+    </string>
+
+    <string name="dialog_title_import">Choose file</string>
 
     <string name="dialog_title_repeat">Select repeat</string>
     <string name="dialog_repeat_0">10 minutes</string>
