--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="horizontal"
     android:paddingVertical="@dimen/layout_16dp"
     android:paddingHorizontal="@dimen/layout_24dp">
@@ -17,7 +18,7 @@
 
     <TextView
         android:id="@+id/loading_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/layout_8dp"
         android:layout_marginEnd="@dimen/layout_0dp"
