--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -45,9 +45,7 @@
 
     <string name="pref_summary_app_theme">Выбранная тема</string>
 
-    <string name="pref_summary_backup_import_search">
-        Мы ищем резервный файлы, дайте нам пару секунд…
-    </string>
+    <string name="pref_summary_backup_import_search">Мы ищем резервный файлы</string>
     <string name="pref_summary_backup_import_empty">
         У Вас нет файлов для восстановления данных
     </string>
