--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -66,9 +66,7 @@
 
     <string name="pref_summary_app_theme">Selected theme</string>
 
-    <string name="pref_summary_backup_import_search">
-        We searching for a backup files, give us few seconds…
-    </string>
+    <string name="pref_summary_backup_import_search">We searching for a backup files</string>
     <string name="pref_summary_backup_import_empty">
         You don\'t have any backup files
     </string>
