--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -10,7 +10,7 @@
     <string name="pref_header_main">Main</string>
     <string name="pref_header_save">Save</string>
     <string name="pref_header_alarm">Notifications</string>
-    <string name="pref_header_sound">Sound</string>
+    <string name="pref_header_melody_options">Melody options</string>
     <string name="pref_header_other">Other</string>
     <string name="pref_header_options">Options</string>
 
@@ -66,7 +66,7 @@
 
     <string name="pref_summary_app_theme">Selected theme</string>
 
-    <string name="pref_summary_backup_import_search">We searching for a backup files</string>
+    <string name="pref_summary_backup_import_search">Searching for a backup files</string>
     <string name="pref_summary_backup_import_empty">
         You don\'t have any backup files
     </string>
@@ -85,7 +85,7 @@
     <string name="pref_summary_alarm_repeat">Will be used for repeat notification</string>
     <string name="pref_summary_alarm_signal">will be used for notify you</string>
     <string name="pref_summary_alarm_melody">Will be play on notification</string>
-    <string name="pref_summary_alarm_melody_prepare">We check out your melodies…</string>
+    <string name="pref_summary_alarm_melody_search">Check out your melodies</string>
     <string name="pref_summary_alarm_melody_empty">Sorry, you don\'t have any melodies! :(</string>
     <string name="pref_summary_alarm_volume">Percent of volume: %d%%</string>
     <string name="pref_summary_alarm_increase">Smooth volume increase from minimum</string>
