--- a/app/src/main/res/xml/preference_note.xml
+++ b/app/src/main/res/xml/preference_note.xml
@@ -29,9 +29,13 @@
             android:title="@string/pref_title_note_save_pause"
             app:iconSpaceReserved="false" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/pref_header_auto_save"
+        app:iconSpaceReserved="false">
+
         <SwitchPreferenceCompat android:defaultValue="@bool/pref_note_save_auto"
             android:key="@string/pref_key_note_auto"
-            android:summary="@string/pref_summary_note_save_auto"
             android:title="@string/pref_title_note_save_auto"
             app:iconSpaceReserved="false" />
 
