--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -16,7 +16,7 @@
     <string name="pref_header_options">Options</string>
 
     <string name="pref_header_entities_print" translatable="false">Print of entities</string>
-    <string name="pref_header_preference_print" translatable="false">Print of preferences</string>
+    <string name="pref_header_other_print" translatable="false">Other prints</string>
     <string name="pref_header_screen" translatable="false">Open screen</string>
     <string name="pref_header_path_save" translatable="false">Save file path</string>
     <string name="pref_header_path_files" translatable="false">External file path</string>
@@ -53,8 +53,8 @@
     <string name="pref_title_print_visible" translatable="false">Roll visible entities</string>
     <string name="pref_title_print_rank" translatable="false">Rank entities</string>
     <string name="pref_title_print_alarm" translatable="false">Alarm entities</string>
-    <string name="pref_title_print_key" translatable="false">Keys</string>
-    <string name="pref_title_print_file" translatable="false">Files</string>
+    <string name="pref_title_print_key" translatable="false">Preference keys</string>
+    <string name="pref_title_print_file" translatable="false">Files data</string>
 
     <string name="pref_title_screen_intro" translatable="false">Intro screen</string>
     <string name="pref_title_screen_alarm" translatable="false">Alarm screen</string>
