Add eternal category for DevelopFragment.kt

--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -22,6 +22,7 @@
     <string name="pref_header_path_files" translatable="false">External file path</string>
     <string name="pref_header_path_cache" translatable="false">External cache path</string>
     <string name="pref_header_backup_files" translatable="false">Backup files</string>
+    <string name="pref_header_service" translatable="false">Eternal service</string>
 
     <!-- Preference titles -->
 
@@ -59,6 +60,10 @@
     <string name="pref_title_screen_intro" translatable="false">Intro screen</string>
     <string name="pref_title_screen_alarm" translatable="false">Alarm screen</string>
 
+    <string name="pref_title_service_refresh" translatable="false">Refresh service state</string>
+    <string name="pref_title_service_run" translatable="false">Run service</string>
+    <string name="pref_title_service_kill" translatable="false">Kill service</string>
+
     <string name="pref_title_other_reset" translatable="false">Reset preference</string>
 
     <!-- Preference summaries -->
@@ -95,6 +100,10 @@
 
     <string name="pref_summary_screen_intro" translatable="false">Application will be restarted</string>
     <string name="pref_summary_screen_alarm" translatable="false">Open alarm for random note</string>
+
+    <string name="pref_summary_eternal_refresh" translatable="false">Click for start service ping pong</string>
+    <string name="pref_summary_eternal_search" translatable="false">Ping service is running</string>
+
     <string name="pref_summary_other_reset" translatable="false">Keys will be set by default</string>
 
     <!-- Preference arrays -->
@@ -205,6 +214,10 @@
 
     <string name="pref_key_screen_intro" translatable="false">key_screen_intro</string>
     <string name="pref_key_screen_alarm" translatable="false">key_screen_alarm</string>
+
+    <string name="pref_key_service_refresh" translatable="false">pref_key_service_refresh</string>
+    <string name="pref_key_service_run" translatable="false">pref_key_service_run</string>
+    <string name="pref_key_service_kill" translatable="false">pref_key_service_kill</string>
 
     <string name="pref_key_other_reset" translatable="false">pref_key_other_reset</string>
 
