--- a/app/src/main/res/xml/preference_develop.xml
+++ b/app/src/main/res/xml/preference_develop.xml
@@ -62,6 +62,24 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="@string/pref_header_service"
+        app:iconSpaceReserved="false">
+
+        <Preference android:key="@string/pref_key_service_refresh"
+            android:summary="@string/pref_summary_eternal_refresh"
+            android:title="@string/pref_title_service_refresh"
+            app:iconSpaceReserved="false" />
+
+        <Preference android:key="@string/pref_key_service_run"
+            android:title="@string/pref_title_service_run"
+            app:iconSpaceReserved="false" />
+
+        <Preference android:key="@string/pref_key_service_kill"
+            android:title="@string/pref_title_service_kill"
+            app:iconSpaceReserved="false" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/pref_header_other"
         app:iconSpaceReserved="false">
 
