--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -7,7 +7,7 @@
     <string name="pref_header_common">Common</string>
     <string name="pref_header_main">Main</string>
     <string name="pref_header_save">Save</string>
-    <string name="pref_header_auto_save">Auto save</string>
+
     <string name="pref_header_melody_options">Melody options</string>
     <string name="pref_header_other">Other</string>
     <string name="pref_header_options">Options</string>
@@ -35,8 +35,8 @@
     <string name="pref_title_note_sort">Sort notes</string>
     <string name="pref_title_note_color">Default note color</string>
     <string name="pref_title_note_save_pause">On stop</string>
-    <string name="pref_title_note_save_auto">Save note changes after period of time</string>
-    <string name="pref_title_note_save_period">Period</string>
+    <string name="pref_title_note_auto_save">Auto save</string>
+    <string name="pref_title_note_save_period">Period of auto save</string>
 
     <string name="pref_title_alarm">Notifications</string>
     <string name="pref_title_alarm_repeat">Repeat time</string>
@@ -90,6 +90,7 @@
     <string name="pref_summary_note_sort">Will be used by default</string>
     <string name="pref_summary_note_color">Will be used by default</string>
     <string name="pref_summary_note_save_pause">Will save note changes when you leave application</string>
+    <string name="pref_summary_note_save_auto">Save note changes after period of time</string>
     <string name="pref_summary_note_save_period">Number of minutes</string>
 
     <string name="pref_summary_alarm_repeat">Will be used for repeat notification</string>
