--- a/app/src/main/res/values/dimens_device.xml
+++ b/app/src/main/res/values/dimens_device.xml
@@ -53,4 +53,8 @@
     <dimen name="item_roll_space">8dp</dimen>
     <dimen name="item_roll_icon_horizontal_space">0dp</dimen>
 
+    <!--  View dimens  -->
+
+    <dimen name="view_volume_seek_space">10dp</dimen>
+
 </resources>
