--- a/app/src/main/res/layout/view_volume.xml
+++ b/app/src/main/res/layout/view_volume.xml
@@ -22,6 +22,7 @@
         android:id="@+id/volume_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/view_volume_seek_space"
         android:max="100"
         tools:progress="75" />
 
