--- a/app/src/main/res/layout/activity_help_description.xml
+++ b/app/src/main/res/layout/activity_help_description.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.screen.ui.impl.preference.DescriptionActivity">
+    tools:context=".presentation.screen.ui.impl.preference.HelpDescriptionActivity">
 
     <include layout="@layout/inc_toolbar_simple" />
 
