--- a/app/src/main/res/values-sw600dp/dimens_device.xml
+++ b/app/src/main/res/values-sw600dp/dimens_device.xml
@@ -6,9 +6,11 @@
     <dimen name="item_card_elevation">2.3dp</dimen> <!--0.3dp-->
     <dimen name="item_card_radius">5dp</dimen> <!--1dp-->
 
-    <dimen name="text_note_card_margin">9dp</dimen> <!--1dp-->
-    <dimen name="text_note_card_elevation">2.3dp</dimen> <!--0.3dp-->
-    <dimen name="text_note_card_radius">5dp</dimen> <!--1dp-->
+    <dimen name="text_card_margin">9dp</dimen> <!--1dp-->
+    <dimen name="text_card_elevation">2.3dp</dimen> <!--0.3dp-->
+    <dimen name="text_card_radius">5dp</dimen> <!--1dp-->
+    <dimen name="text_card_text">20sp</dimen> <!--2sp-->
+    <dimen name="text_card_space">10dp</dimen> <!--2dp-->
 
     <dimen name="recycler_vertical_margin">6dp</dimen> <!--2dp-->
     <dimen name="recycler_horizontal_margin">6dp</dimen> <!--6dp-->
@@ -20,6 +22,10 @@
     <dimen name="color_vertical_size">8.5dp</dimen> <!--0.5dp-->
     <dimen name="color_vertical_shift_space">1dp</dimen> <!--1dp-->
     <dimen name="color_horizontal_size">5.5dp</dimen> <!--1.5dp-->
+
+    <dimen name="button_borderless_text">16sp</dimen> <!--2sp-->
+    <dimen name="button_borderless_inside_vertical_space">14dp</dimen> <!--2dp-->
+    <dimen name="button_borderless_inside_horizontal_space">26dp</dimen> <!--2dp-->
 
     <!-- Info page dimens -->
 
@@ -38,7 +44,7 @@
     <dimen name="item_content_between_space">9dp</dimen> <!--1dp-->
     <dimen name="item_content_half_between_space">4.5dp</dimen> <!--0.5dp-->
     <dimen name="item_first_text">18sp</dimen> <!--2sp-->
-    <dimen name="item_second_text">16sp</dimen> <!--2dp-->
+    <dimen name="item_second_text">16sp</dimen> <!--2sp-->
     <dimen name="item_third_text">14sp</dimen> <!--2sp-->
     <dimen name="item_small_icon_size">18dp</dimen> <!--2dp-->
     <dimen name="item_count_icon_space">1.25dp</dimen> <!--0.25dp-->
