--- a/app/src/main/res/values-sw720dp/dimens_device.xml
+++ b/app/src/main/res/values-sw720dp/dimens_device.xml
@@ -6,9 +6,11 @@
     <dimen name="item_card_elevation">3dp</dimen> <!--1dp-->
     <dimen name="item_card_radius">6dp</dimen> <!--2dp-->
 
-    <dimen name="text_note_card_margin">12dp</dimen> <!--2dp-->
-    <dimen name="text_note_card_elevation">3dp</dimen> <!--1dp-->
-    <dimen name="text_note_card_radius">6dp</dimen> <!--2dp-->
+    <dimen name="text_card_margin">12dp</dimen> <!--2dp-->
+    <dimen name="text_card_elevation">3dp</dimen> <!--1dp-->
+    <dimen name="text_card_radius">6dp</dimen> <!--2dp-->
+    <dimen name="text_card_text">22sp</dimen> <!--4sp-->
+    <dimen name="text_card_space">12dp</dimen> <!--4dp-->
 
     <dimen name="recycler_vertical_margin">10dp</dimen> <!--6dp-->
     <dimen name="recycler_horizontal_margin">12dp</dimen> <!--12dp-->
@@ -20,6 +22,10 @@
     <dimen name="color_vertical_size">9dp</dimen> <!--1dp-->
     <dimen name="color_vertical_shift_space">2dp</dimen> <!--2dp-->
     <dimen name="color_horizontal_size">8dp</dimen> <!--4dp-->
+
+    <dimen name="button_borderless_text">18sp</dimen> <!--4sp-->
+    <dimen name="button_borderless_inside_vertical_space">16dp</dimen> <!--4dp-->
+    <dimen name="button_borderless_inside_horizontal_space">28dp</dimen> <!--4dp-->
 
     <!-- Info page dimens -->
 
@@ -38,8 +44,8 @@
     <dimen name="item_content_between_space">10dp</dimen> <!--2dp-->
     <dimen name="item_content_half_between_space">5dp</dimen> <!--1dp-->
     <dimen name="item_first_text">20sp</dimen> <!--4sp-->
-    <dimen name="item_second_text">18sp</dimen> <!--4dp-->
-    <dimen name="item_third_text">16sp</dimen> <!--2sp-->
+    <dimen name="item_second_text">18sp</dimen> <!--4sp-->
+    <dimen name="item_third_text">16sp</dimen> <!--4sp-->
     <dimen name="item_small_icon_size">20dp</dimen> <!--4dp-->
     <dimen name="item_count_icon_space">1.5dp</dimen> <!--0.5dp-->
 
