--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -50,7 +50,7 @@
     <string name="pref_title_other_about">About app</string>
     <string name="pref_title_other_develop">For developer</string>
 
-    <string name="pref_title_help_eternal_notification">Why notifications disappear?</string>
+    <string name="pref_title_help_notification_disappear">Why notifications disappear?</string>
     <string name="pref_title_help_privacy_policy">Privacy policy</string>
 
     <string name="pref_title_print_note" translatable="false">Note entities</string>
@@ -101,7 +101,7 @@
     <string name="pref_summary_alarm_volume">Percent of volume: %d%%</string>
     <string name="pref_summary_alarm_increase">Smooth volume increase from minimum</string>
 
-    <string name="pref_summary_help_eternal_notification">And how get it work</string>
+    <string name="pref_summary_help_notification_disappear">And how fix it</string>
 
     <string name="pref_summary_print_note" translatable="false">Which located in NOTES page</string>
     <string name="pref_summary_print_bin" translatable="false">Which located in BIN page</string>
@@ -211,7 +211,7 @@
     <string name="pref_key_other_about" translatable="false">key_other_about</string>
     <string name="pref_key_other_develop" translatable="false">key_other_develop</string>
 
-    <string name="pref_key_help_eternal_notification" translatable="false">key_help_eternal_notification</string>
+    <string name="pref_key_help_notification_disappear" translatable="false">key_help_eternal_notification</string>
     <string name="pref_key_help_privacy_policy" translatable="false">key_help_privacy_policy</string>
 
     <string name="pref_key_print_note" translatable="false">key_print_note</string>
